[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/PlayerInterface/Networked/NetworkedPlayerInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Managers/Battle/Networked/NetworkedBattleManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/BattleInterface/Networked/NetworkedBattleInterface.gd" type="Script" id=3]

[node name="NetworkedBattleInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleEndDelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="NetworkedPlayerInterface" parent="." instance=ExtResource( 1 )]

[node name="NetworkedBattleManager" parent="." instance=ExtResource( 2 )]
[connection signal="card_forgotten" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_card_forgotten"]
[connection signal="card_inspected" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_card_inspected"]
[connection signal="card_played" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_card_played"]
[connection signal="card_played_on_opportunity" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_card_played_on_opportunity"]
[connection signal="discard_pile_pressed" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_discard_pile_pressed"]
[connection signal="draw_pile_pressed" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_draw_pile_pressed"]
[connection signal="ending_turn" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_ending_turn"]
[connection signal="exhaust_pile_pressed" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_exhaust_pile_pressed"]
[connection signal="status_forgotten" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_status_forgotten"]
[connection signal="status_inspected" from="NetworkedPlayerInterface" to="." method="_on_PlayerInterface_status_inspected"]
[connection signal="active_character_updated" from="NetworkedBattleManager" to="." method="_on_BattleManager_active_character_updated"]
[connection signal="before_hand_discarded" from="NetworkedBattleManager" to="." method="_on_BattleManager_before_hand_discarded"]
[connection signal="before_hand_drawn" from="NetworkedBattleManager" to="." method="_on_BattleManager_before_hand_drawn"]
[connection signal="card_added_to_hand" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_added_to_hand"]
[connection signal="card_discarded" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_discarded"]
[connection signal="card_drawn" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_drawn"]
[connection signal="card_exhausted" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_exhausted"]
[connection signal="card_played" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_played"]
[connection signal="card_reshuffled" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_reshuffled"]
[connection signal="card_spawned" from="NetworkedBattleManager" to="." method="_on_BattleManager_card_spawned"]
[connection signal="opportunities_reset" from="NetworkedBattleManager" to="." method="_on_BattleManager_opportunities_reset"]
[connection signal="opportunity_added" from="NetworkedBattleManager" to="." method="_on_BattleManager_opportunity_added"]
[connection signal="opportunity_removed" from="NetworkedBattleManager" to="." method="_on_BattleManager_opportunity_removed"]
[connection signal="status_updated" from="NetworkedBattleManager" to="." method="_on_BattleManager_status_updated"]
[connection signal="team_won" from="NetworkedBattleManager" to="." method="_on_BattleManager_team_won"]
[connection signal="turn_ended" from="NetworkedBattleManager" to="." method="_on_BattleManager_turn_ended"]
[connection signal="turn_started" from="NetworkedBattleManager" to="." method="_on_BattleManager_turn_started"]
